--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-modalium": "^1.0.7",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
